--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,28 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    junitVersion = '5.10.0'
+    okhttpVersion = '4.11.0' // Update to the latest stable version as needed
+    gsonVersion = '2.10.1' // Update to the latest stable version as needed
+    slf4jVersion = '2.0.9'
+    logbackVersion = '1.4.11'
+}
+
 dependencies {
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
-    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
+    // JUnit 5 for testing
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
+
+    // OkHttpClient for HTTP requests
+    implementation "com.squareup.okhttp3:okhttp:${okhttpVersion}"
+
+    // Gson for JSON parsing
+    implementation "com.google.code.gson:gson:${gsonVersion}"
+
+    // SLF4J API and Logback for logging
+    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
+    runtimeOnly "ch.qos.logback:logback-classic:${logbackVersion}"
 }
 
 test {
@@ -39,9 +58,16 @@ shadowJar {
 
 checkstyle {
     toolVersion = '10.2'
+    // Optionally, specify a Checkstyle config file
+    // configFile = file("config/checkstyle/checkstyle.xml")
 }
 
-run{
+run {
     standardInput = System.in
     enableAssertions = true
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
