--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,7 +13,8 @@ last_edit_timestamp: true # show or hide edit time - page must have `last_modifi
 last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
 
 
-nav_enabled: true
+# nav_enabled: true
+nav_enabled: false
 
 mermaid:
   version: "9.1.3"
