--- a/build.gradle
+++ b/build.gradle
@@ -29,12 +29,15 @@ test {
 }
 
 application {
-    mainClass.set("seedu.duke.Duke")
+    //mainClass.set("seedu.duke.Duke")
+    mainClass.set("fittrack.FitTrack")
 }
 
 shadowJar {
-    archiveBaseName.set("duke")
-    archiveClassifier.set("")
+//    archiveBaseName.set("duke")
+//    archiveClassifier.set("")
+    archiveFileName = 'fittrack.jar'
+
 }
 
 checkstyle {
