--- a/build.gradle
+++ b/build.gradle
@@ -29,14 +29,14 @@ test {
 }
 
 application {
-    //mainClass.set("seedu.duke.Duke")
-    mainClass.set("fittrack.FitTrack")
+    mainClass.set("seedu.duke.Duke")
+   // mainClass.set("fittrack.FitTrack")
 }
 
 shadowJar {
-//    archiveBaseName.set("duke")
-//    archiveClassifier.set("")
-    archiveFileName = 'fittrack.jar'
+    archiveBaseName.set("duke")
+    archiveClassifier.set("")
+   // archiveFileName = 'fittrack.jar'
 
 }
 
