--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ test {
 }
 
 application {
-    mainClass.set("seedu.EasInternship.EasInternship")
+    mainClass.set("seedu.easinternship.EasInternship")
 }
 
 shadowJar {
