--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,7 @@ application {
 }
 
 shadowJar {
-    archiveBaseName.set("duke")
-    archiveClassifier.set("")
+    archiveFileName = "easInternship.jar"
 }
 
 checkstyle {
